# Apathion

./: .gitignore  LICENSE  README.md  pyproject.toml  test_palmtrees.py
configs/: aco_example.json  branching_map.json  branching_map2.json  example_experiment.json  example_game.json  open_arena.json
configs/experiments/: astar_variants.json  baseline_comparison.json  full_comparison.json  path_diversity_test.json  performance_stress.json
docs/: ACO_IMPLEMENTATION.md  ACO_QUICKSTART.md  ASTAR_IMPLEMENTATION.md  CLI_REFERENCE.md  GAMEPLAY_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  RUNNING_EXPERIMENTS.md  requirements.md
scripts/: run_experiments.py  run_report_experiments.sh
src/apathion/: __init__.py  cli.py  config.py
src/apathion/evaluation/: __init__.py  evaluator.py  headless_simulator.py  logger.py  metrics.py
src/apathion/game/: __init__.py  bullet.py  enemy.py  game.py  game_loop.py  map.py  particles.py  renderer.py  tower.py
src/apathion/pathfinding/: __init__.py  aco.py  astar.py  base.py  dqn.py  dqn_env.py  dqn_reward_profiles.py  fixed.py  hybrid.py
tests/: __init__.py  test_aco.py  test_aco_integration.py  test_astar.py  test_astar_visual_comparison.py  test_cli_algorithm_names.py  test_enemy_movement_fix.py  test_fixed_path.py  test_path_validation.py
